--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@react-stately/utils": "^3.10.8",
     "@tailwindcss/vite": "^4.1.18",
     "@untitledui/icons": "^0.0.19",
     "react": "^19.1.0",
+    "react-aria": "^3.44.0",
     "react-aria-components": "^1.13.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.11.0",
@@ -44,5 +46,6 @@
     "typescript-eslint": "^8.46.4",
     "untitledui": "^0.1.51",
     "vite": "^7.2.4"
-  }
+  },
+  "packageManager": "yarn@1.22.22"
 }
